Translate: Meta-route optimization

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/robotmensaje.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Clasificación de mensajes automática</h4>
+                                <h4>Message classification and priorization</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -319,7 +319,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/optimizacion-truck.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Meta-optimizáción de rutas</h4>
+                                <h4>Meta-route optimization</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -442,15 +442,15 @@
             <img class="img-res" src="assets/img/robotmensaje.png" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Clasificación de mensajes automática</h4>
+            <h4 class="modal-title">Message classification and priorization.</h4>
             <h5 class="modal-title">Where:</h5>
             	<p>Aquaservice<p>
         	<h5 class="modal-title">What:</h5>
-            	<p>Cuando un cliente envía un mensaje a atención al cliente a través de la APP, este pasa previamente por un clasificador que decide si el mensaje requiere una gestión manual de alguna operadora o si puede ser resuelto mediante alguno de los flujos automáticos definidos. Se alcanzan precisiones superiores al 90% y sensibilidades según el flujo supriores al 80%.</p>
+            	<p>When a customer sends a message to customer service through the APP, it first goes through a classifier that decides whether the message requires manual handling by an operator or whether it can be resolved through one of the automatic flows defined. If needs to handled by customer service, the message it's prioritized based on sentiment. Accuracies over 90% and flow sensitivities of over 80% are achieved.</p>
             <h5 class="modal-title">How:</h5>
-            	<p>Para la clasificación se utilizan tecnicas de NLP basadas en el Transformer BERT adaptadas para el problema particular considerando como input únicamente el texto.<p>
+            	<p>For the classification, NLP techniques based on the BERT Transformer are used, fine-tuned to the particular problem, considering only text as input. Using different pre-trained huggingface trasnformers.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Lider de equipo y desarrollador.<p>
+            	<p>Team lead and dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
@@ -464,15 +464,15 @@
             <img class="img-res" src="assets/img/optimizacion-truck.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Meta-optimizáción de rutas</h4>
+            <h4 class="modal-title">Meta-route optimization.</h4>
             <h5 class="modal-title">Where:</h5>
             	<p>Aquaservice<p>
         	<h5 class="modal-title">What:</h5>
-            	<p>Con la adquisición de nuevos clientes las rutas de reparto se van descompensando con el tiempo. Para corregirlo se realizan reoganización/optimizaciones de rutas mediante software específicos que realizan la taea. Sin embargo esto genera adelantos y retrasos a los clientes al modificar las rutas provocando importantes perdidas de facturación a la empresa.</p>
+            	<p>With the acquisition of new customers, delivery routes become unbalanced over time. To correct this, routes are re-organized/optimized using specific software that performs the task. However, this generates advances and delays to customers by modifying the routes, causing significant losses of turnover (carry over) to the company.</p>
             <h5 class="modal-title">How:</h5>
-            	<p>Mediante ingeniería inversa del software específico, en base a los resultados del software se "trucan" los datos de entrada introduciendo prioridades para minimizar retrasos/adelantos.<p>
+            	<p>By reverse engineering the specific software, based on the results of the software, the input data is "tricked" by introducing priorities to minimize delays/previews.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Lider de equipo y desarrollador.<p>
+            	<p>Team lead and dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
