Translate: Demand forecast without historical data

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <div class="portfolio-item">
                             <img src="https://images.pexels.com/photos/1884581/pexels-photo-1884581.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Predicción de ventas sin histórico</h4>
+                                <h4>Demand forecast without historical data</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem9"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -583,15 +583,15 @@
             <img class="img-res" src="https://images.pexels.com/photos/1884581/pexels-photo-1884581.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Predicción de ventas sin histórico</h4>
+            <h4 class="modal-title">Demand forecast without historical data</h4>
             <h5 class="modal-title">Where:</h5>
             	<p>Nextail.<p>
         	<h5 class="modal-title">What:</h5>
-            	<p> Problema de tipo cold-start forecasting aplicado al sector retail con la introducción de nuevos productos. La predicción se realiza en base a los atributos de los propios productos teniendo un histórico de ventas de otros productos y sus atributos. </p>
+            	<p>Cold-start forecasting problem applied to the retail sector with the introduction of new products. The forecasting is done based on the attributes of the products themselves having a sales history of other products and their attributes. It's a similarity problem transformed into a supervised learning problem.</p>
             <h5 class="modal-title">How:</h5>
-            	<p> Generación de targts sinteticos para representar el potencial de ventas del producto y predicción en base a métodos de Gradient Boosting. Para el tratamiento de los atributos se utilizan ténicas de NLP, series temporales y algoritmos de clasificación no supervisados.<p>
+            	<p>Generation of synthetic targts to represent the demand potential of the product and forecast based on Gradient Boosting methods. NLP techniques (SpaCy), time series and unsupervised classification algorithms are used to process the attributes.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Desarrollador.<p>
+            	<p>Core algorithm/model dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
