--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <h5 class="modal-title">How:</h5>
             	<p>For this purpose, gradient boosting techniques are used, taking into account data from vehicle gauging at various points of the peninsula.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Mobility engineer and core algorithm dev.<p>
+            	<p>Mobility engineer and core algorithm/model dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
@@ -613,7 +613,7 @@
             <h5 class="modal-title">How:</h5>
             	<p>Time series forecasting techniques, deseasonalization, stock-outs management and other effects specific to the retail sector.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Core algorithms dev.<p>
+            	<p>Core algorithm/model dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
