--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="https://valenciaplaza.com/public/Image/2020/1/1579188529aqua_NoticiaAmpliada.jpg" class="img-res" alt="">
+                            <img src="assets/img/aqua_truck.jpeg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Truck load forecasting</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
