Adding dot at the end of sentence

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           <div class="modal-body">
             <h4 class="modal-title">Water consumption forecast</h4>
             <h5 class="modal-title">Company:</h5>
-            	<p>Aquaservice<p>
+            	<p>Aquaservice.<p>
         	<h5 class="modal-title">What:</h5>
             	<p>The objective of the project was to make an accurate forecast for water bottle consumption consumption that will be made in each warehouse on a daily basis during the following week. The results gave accuracies up to 95%.</p>
             <h5 class="modal-title">How:</h5>
@@ -422,7 +422,7 @@
           <div class="modal-body">
             <h4 class="modal-title">Truck load forecasting</h4>
             <h5 class="modal-title">Where:</h5>
-            	<p>Aquaservice<p>
+            	<p>Aquaservice.<p>
         	<h5 class="modal-title">What:</h5>
             	<p>Daily (day ahead) bottle delivery forecast for each delivery truck and each shift. For this purpose gradient boosting techniques are used taking into account operational variables, information on the customers to be delivered and the seniority of the delivery drivers. Getting savings of more than 30% of the load that was not going to be delivered.</p>
             <h5 class="modal-title">How:</h5>
@@ -444,7 +444,7 @@
           <div class="modal-body">
             <h4 class="modal-title">Message classification and priorization.</h4>
             <h5 class="modal-title">Where:</h5>
-            	<p>Aquaservice<p>
+            	<p>Aquaservice.<p>
         	<h5 class="modal-title">What:</h5>
             	<p>When a customer sends a message to customer service through the APP, it first goes through a classifier that decides whether the message requires manual handling by an operator or whether it can be resolved through one of the automatic flows defined. If needs to handled by customer service, the message it's prioritized based on sentiment. Accuracies over 90% and flow sensitivities of over 80% are achieved.</p>
             <h5 class="modal-title">How:</h5>
@@ -466,7 +466,7 @@
           <div class="modal-body">
             <h4 class="modal-title">Meta-route optimization.</h4>
             <h5 class="modal-title">Where:</h5>
-            	<p>Aquaservice<p>
+            	<p>Aquaservice.<p>
         	<h5 class="modal-title">What:</h5>
             	<p>With the acquisition of new customers, delivery routes become unbalanced over time. To correct this, routes are re-organized/optimized using specific software that performs the task. However, this generates advances and delays to customers by modifying the routes, causing significant losses of turnover (carry over) to the company.</p>
             <h5 class="modal-title">How:</h5>
