--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About me</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hi! I'm Aitor Mira Abad, Data Scientist and Civil Engineer. Below you can explore my resume, a summary of my knowledge and a sample of the most relevant projects I have worked in. </p>
+                        <p>Hi! I'm Aitor Mira Abad, Data Scientist and Civil Engineer. Below you can explore my resume, a summary of my knowledge and a small sample of the most relevant projects I have worked in. </p>
                         <a href="https://mnf.red/aitor_mira" class="btn btn-fill" target="_blank" download>Check my detailed cv</a>
                     </div>
                 </div>
